--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,7 +5,7 @@
   "semi": true,
   "experimentalTernaries": false,
   "singleQuote": true,
-  "jsxSingleQuote": false,
+  "jsxSingleQuote": true,
   "quoteProps": "as-needed",
   "trailingComma": "es5",
   "singleAttributePerLine": false,
@@ -13,9 +13,9 @@
   "vueIndentScriptAndStyle": false,
   "proseWrap": "preserve",
   "insertPragma": false,
+  "printWidth": 80,
   "requirePragma": false,
   "tabWidth": 2,
   "useTabs": false,
-  "embeddedLanguageFormatting": "auto",
-  "printWidth": 80
+  "embeddedLanguageFormatting": "auto"
 }
