--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pixelify": "^0.2.2",
+    "react-router-dom": "^6.23.1",
     "react95": "^4.0.0",
     "styled-components": "^6.1.11"
   },
